--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">KS Store</string>
+    <string name="app_name">Baik POS</string>
     <string name="crash_toast_text">Crash Report</string>
 
     // for application
